--- a/index.html
+++ b/index.html
@@ -423,20 +423,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				
 				<br>
 
+				<div id="content" class="grid_12" style="background: rgba(0,0,0,0.85); padding: 40px 30px 0px;">
 				<div class = "data-book" style="width: 1000px">
-					<div><img src='images/proj/ttb/1.jpg'></div>
-					<div><img src='images/proj/ttb/12.jpg'></div>
-					<div><img src='images/proj/ttb/2.jpg'></div>
-					<div><img src='images/proj/ttb/3.jpg'></div>
-					<div><img src='images/proj/ttb/4.jpg'></div>
-					<div><img src='images/proj/ttb/5.jpg'></div>
-					<div><img src='images/proj/ttb/6.jpg'></div>
-					<div><img src='images/proj/ttb/7.jpg'></div>
-					<div><img src='images/proj/ttb/8.jpg'></div>
-					<div><img src='images/proj/ttb/9.jpg'></div>
-					<div><img src='images/proj/ttb/10.jpg'></div>
-					<div><img src='images/proj/ttb/11.jpg'></div>
-				</div>
+					<div><img src='images/proj/ttb/1.jpg'><h5>Front cover</h5></div>
+					<div style="text-align:right"><img src='images/proj/ttb/12.jpg'><h5>Back cover</h5></div>
+					<div><img src='images/proj/ttb/2.jpg'><h5>Page 1</h5></div>
+					<div style="text-align:right"><img src='images/proj/ttb/3.jpg'><h5>Page 2</h5></div>
+					<div><img src='images/proj/ttb/4.jpg'><h5>Page 3</h5></div>
+					<div style="text-align:right"><img src='images/proj/ttb/5.jpg'><h5>Page 4</h5></div>
+					<div><img src='images/proj/ttb/6.jpg'><h5>Page 5</h5></div>
+					<div style="text-align:right"><img src='images/proj/ttb/7.jpg'><h5>Page 6</h5></div>
+					<div><img src='images/proj/ttb/8.jpg'><h5>Page 7</h5></div>
+					<div style="text-align:right"><img src='images/proj/ttb/9.jpg'><h5>Page 8</h5></div>
+					<div><img src='images/proj/ttb/10.jpg'><h5>Page 9</h5></div>
+					<div style="text-align:right"><img src='images/proj/ttb/11.jpg'><h5>Page 10</h5></div>
+				</div></div>
 
 			</div>
 
@@ -500,6 +501,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			  speed: 300,
 			  slidesToShow: 2,
 			  slidesToScroll: 2,
+			  autoplay:true,
 			  responsive: [
 			    {
 			      breakpoint: 1024,
