--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				Games
 			</div>
 
-			<div id="content" class="grid_12">
+			<br><br>
+			<div id="content" class="grid_12" style="background: rgba(0,0,0,0.85); padding: 40px 30px 80px;">
 				<!--<h1>Eoin</h1>-->
-				<br><br>
 
 				<h1>Bleach Bear</h1>
 				<p><a href="https://github.com/ju-de/bleachbear-game">See it on Github</a> · <a href="">Try the demo</a></p>
@@ -380,12 +380,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<b>Boom-ble bee</b><br>
 					Just beecause.
 				</div>
-
+				<br><br><br>
 			</div>
 
-			<div id="content" class="grid_12">
-				<br><br>
-			
+			<div id="content" class="grid_12" style="background: rgba(0,0,0,0.85); padding: 40px 30px 80px;">
 				<h1>Tikitunes</h1>
 
 				<p><a href="https://github.com/ju-de/bleachbear-game">See it on Github</a>
@@ -411,19 +409,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<img src='images/proj/tkt/p6.gif'>
 				</div>
 
-
+				<br><br>
 			</div>
 
-			<div id="content" class="grid_12">
-				<br><br>
-			
+			<div id="content" class="grid_12" style="background: rgba(0,0,0,0.85); padding: 40px 30px 80px;">
 				<h1>Leaving Vhir</h1>
 
 				<p>Concept art book for Togi Tale.</p>
 				
 				<br>
 
-				<div id="content" class="grid_12" style="background: rgba(0,0,0,0.85); padding: 40px 30px 0px;">
 				<div class = "data-book" style="width: 1000px">
 					<div><img src='images/proj/ttb/1.jpg'><h5>Front cover</h5></div>
 					<div style="text-align:right"><img src='images/proj/ttb/12.jpg'><h5>Back cover</h5></div>
@@ -437,7 +432,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<div style="text-align:right"><img src='images/proj/ttb/9.jpg'><h5>Page 8</h5></div>
 					<div><img src='images/proj/ttb/10.jpg'><h5>Page 9</h5></div>
 					<div style="text-align:right"><img src='images/proj/ttb/11.jpg'><h5>Page 10</h5></div>
-				</div></div>
+				</div>
 
 			</div>
 
