--- a/index.html
+++ b/index.html
@@ -305,12 +305,31 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				Games
 			</div>
 
+			<div id="content" class="grid_12" style="background: rgba(0,0,0,0.85); padding: 40px 30px 80px;">
+				<h1>Grilled</h1>
+				<p><a href="https://github.com/ju-de/grilled">See it on Github</a> · <a href="https://jub.itch.io/grilled">Try the demo</a></p>
+
+				<div id="content" class="grid_5 omega">
+				<img src='images/games/grilled.gif'>
+				</div>
+
+				<div id="content" class="grid_7">
+				<p>In the wild it's meat or be meatened. With only your trusty grill keeping you afloat, you don't need to outrun the lions - you just need to outrun the other guy.
+				Made with only 7 colours and 3 days.</p>
+
+				<img src='images/games/z1.gif' height="115" width="65">
+				<img src='images/games/z2.gif' height="115" width="65">
+				<img src='images/games/l1.gif'>
+				<img src='images/games/l2.gif'>
+				</div>
+			</div>
+
 			<br><br>
 			<div id="content" class="grid_12" style="background: rgba(0,0,0,0.85); padding: 40px 30px 80px;">
 				<!--<h1>Eoin</h1>-->
 
 				<h1>Bleach Bear</h1>
-				<p><a href="https://github.com/ju-de/bleachbear-game">See it on Github</a> · <a href="">Try the demo</a></p>
+				<p><a href="https://github.com/ju-de/bleachbear-game">See it on Github</a></p>
 				<p>A game in which you are an armless bear. As you are unarmed, the only logical thing to do is to, of course, shoot honeycombs with a fish gun.</p>
 				<br>
 
