--- a/index.html
+++ b/index.html
@@ -152,17 +152,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<p><a href="https://github.com/ju-de/grilled">See it on Github</a> · <a href="https://jub.itch.io/grilled">Play it now</a></p>
 
 				<div id="content" class="grid_5 omega">
-				<img src='images/games/grilled.gif'>
+				<img src='images/games/grilled.gif'><br><br><br><br><br>
+				<img src='images/games/z1.gif' height="111">
+				<img src='images/games/z2.gif' height="111">
+				<img src='images/games/l1.gif' height="111">
+				<img src='images/games/l2.gif' height="111">
 				</div>
 
 				<div id="content" class="grid_7">
 				<p>In the wild it's meat or be meatened. With only your trusty grill keeping you afloat, you don't need to outrun the lions - you just need to outrun the other guy.
 				Made with only 7 colours and 3 days.</p>
 
-				<img src='images/games/z1.gif' height="115" width="65">
-				<img src='images/games/z2.gif' height="115" width="65">
-				<img src='images/games/l1.gif'>
-				<img src='images/games/l2.gif'>
+				<img src='images/games/g2.gif'>
 				</div>
 			</div>
 
