--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				</div>
 
 				<div id="content" class="grid_7">
-				<p>In the wild it's meat or be meatened. With only your trusty grill keeping you afloat, you don't need to outrun the lions - you just need to outrun the other guy.
-				Made with only 7 colours and 3 days.</p>
+				<p>In the wild it's meat or be meatened. With only your trusty grill keeping you afloat, you don't need to outrun the lions - you just need to outrun the other guy.</p>
 
 				<img src='images/games/g2.gif'>
 				</div>
