--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 				<div id="content" class="grid_5 omega">
 				<img src='images/games/pumpkin.gif'>
-				<p>Ranked top 10% overall in GBJam 5.</p>
-				<p>Featured in <a href = "http://fireside.gamejolt.com/post/jam-favorites-gbjam-5-xw7aefjh">Jupiter Hadley's GBJam 5 Favourites</a>.</p>
+				<p>🏆 Ranked top 10% overall in GBJam 5</p>
+				<p>Featured in <a href = "http://fireside.gamejolt.com/post/jam-favorites-gbjam-5-xw7aefjh">Jupiter Hadley's GBJam 5 Favourites</a></p>
 				</div>
 
 				<div id="content" class="grid_7">
