vending machine placeholder

--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE HTML>
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
-	<title>jubnaut</title>
-	<link rel="shortcut icon" href="favicon.ico"/>
-	<link rel="stylesheet" href="css/style.css">
-</head>
 
-<body>
+  <head>
+  	<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
+  	<meta name='viewport' content='width=device-width, initial-scale = 1.0, user-scalable = no'>
+  	<title>jub</title>
+  	<link rel='shortcut icon' href='favicon.ico'/>
+  	<link rel='stylesheet' href='css/style.css'>
+  </head>
 
-</body>
+  <body>
+    <div class='box'>
+      <div class='in'>
+        <div class='left'>
+          <div class='grid'>
+            <div class='item'><img src='images/items/sheetghost_icon.png'/>games</div>
+            <div class='item'><img src='images/items/sheetghost_icon.png'/>clothes</div>
+            <div class='item'><img src='images/items/sheetghost_icon.png'/>keycaps</div>
+            <div class='bar'></div>
+            <div class='item'><img src='images/items/sheetghost_icon.png'/>products</div>
+            <div class='item'><img src='images/items/sheetghost_icon.png'/>album covers</div>
+            <div class='item'><img src='images/items/sheetghost_icon.png'/>stickers</div>
+            <div class='bar'></div>
+          </div>
+          <img></img>
+        </div>
+
+        <div class='right'>
+          <!-- <p>jub</p> -->
+            <div class='icon'><img src='images/head_icon.png'/></div>
+            <div class='links'>
+              <a href='https://twitter.com/jubnaut'><img src='images/links/twitter.png'/></a>
+              <a href='https://www.twitch.tv/jubnaut'><img src='images/links/twitch.png'/></a>
+              <a href='https://www.instagram.com/jubbeob'><img src='images/links/ig.png'/></a>
+              <a href='https://jub.itch.io'><img src='images/links/itch.png'/></a>
+            </div>
+        </div>
+      </div>
+    </div>
+  </body>
+
 </html>
