--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <div class='item'><img src='images/items/sheetghost_icon.png'/>stickers</div>
             <div class='bar'></div>
           </div>
-          <img></img>
+          <div class='slot'>
+            <p>hello this is under construction again</p>
+          </div>
         </div>
 
         <div class='right'>
