vending machine buttons

--- a/index.html
+++ b/index.html
@@ -13,23 +13,27 @@
       <div class='in'>
         <div class='left'>
           <div class='grid'>
-            <div class='item'><img src='images/items/sheetghost_icon.png'/>games</div>
-            <div class='item'><img src='images/items/sheetghost_icon.png'/>clothes</div>
-            <div class='item'><img src='images/items/sheetghost_icon.png'/>keycaps</div>
+            <div class='item'><img src='images/items/sheetghost_icon.png'/><div class='button'></div><p class='label'>games</p></div>
+            <div class='item'><img src='images/items/sheetghost_icon.png'/><div class='button'></div><p class='label'>clothes</p></div>
+            <div class='item'><img src='images/items/sheetghost_icon.png'/><div class='button'></div><p class='label'>keycaps</p></div>
             <div class='bar'></div>
-            <div class='item'><img src='images/items/sheetghost_icon.png'/>products</div>
-            <div class='item'><img src='images/items/sheetghost_icon.png'/>album covers</div>
-            <div class='item'><img src='images/items/sheetghost_icon.png'/>stickers</div>
+            <div class='item'><img src='images/items/sheetghost_icon.png'/><div class='button'></div><p class='label'>products</p></div>
+            <div class='item'><img src='images/items/sheetghost_icon.png'/><div class='button'></div><p class='label'>album covers</p></div>
+            <div class='item'><img src='images/items/sheetghost_icon.png'/><div class='button'></div><p class='label'>stickers</p></div>
             <div class='bar'></div>
           </div>
-          <div class='slot'>
+          <div class='card'>
             <p>hello this is under construction again</p>
+            <div class='slot'>
+              <p><b>commissions:</b> closed</p>
+            </div>
           </div>
         </div>
 
         <div class='right'>
           <!-- <p>jub</p> -->
             <div class='icon'><img src='images/head_icon.png'/></div>
+            <div class='slot'>judy chen</div>
             <div class='links'>
               <a href='https://twitter.com/jubnaut'><img src='images/links/twitter.png'/></a>
               <a href='https://www.twitch.tv/jubnaut'><img src='images/links/twitch.png'/></a>
