open in new tab

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <div class='icon'><img src='images/head_icon.png'/></div>
             <div class='slot'>judy chen</div>
             <div class='links'>
-              <a href='https://twitter.com/jubnaut'><img src='images/links/twitter.png'/></a>
-              <a href='https://www.twitch.tv/jubnaut'><img src='images/links/twitch.png'/></a>
-              <a href='https://www.instagram.com/jubbeob'><img src='images/links/ig.png'/></a>
-              <a href='https://jub.itch.io'><img src='images/links/itch.png'/></a>
+              <a href='https://twitter.com/jubnaut' target='_blank'><img src='images/links/twitter.png'/></a>
+              <a href='https://www.twitch.tv/jubnaut' target='_blank'><img src='images/links/twitch.png'/></a>
+              <a href='https://www.instagram.com/jubbeob' target='_blank'><img src='images/links/ig.png'/></a>
+              <a href='https://jub.itch.io' target='_blank'><img src='images/links/itch.png'/></a>
             </div>
         </div>
       </div>
