--- a/index.html
+++ b/index.html
@@ -13,32 +13,24 @@
       <div class='in'>
         <div class='left'>
           <div class='grid'>
-            <div class='item'><img src='images/items/sheetghost_icon.png'/><div class='button'></div><p class='label'>games</p></div>
-            <div class='item'><img src='images/items/sheetghost_icon.png'/><div class='button'></div><p class='label'>clothes</p></div>
-            <div class='item'><img src='images/items/sheetghost_icon.png'/><div class='button'></div><p class='label'>keycaps</p></div>
-            <div class='bar'></div>
-            <div class='item'><img src='images/items/sheetghost_icon.png'/><div class='button'></div><p class='label'>products</p></div>
-            <div class='item'><img src='images/items/sheetghost_icon.png'/><div class='button'></div><p class='label'>album covers</p></div>
-            <div class='item'><img src='images/items/sheetghost_icon.png'/><div class='button'></div><p class='label'>stickers</p></div>
-            <div class='bar'></div>
-          </div>
-          <div class='card'>
-            <p>hello this is under construction again</p>
-            <div class='slot'>
-              <p><b>commissions:</b> closed</p>
-            </div>
+            <div class='item'><img src='images/items/item1.png'/></div>
+            <div class='item'><img src='images/items/item1.png'/></div>
+            <div class='item'><img src='images/items/item1.png'/></div>
+
+            <div class='item'><img src='images/items/item1.png'/></div>
+            <div class='item'><img src='images/items/item1.png'/></div>
+            <div class='item'><img src='images/items/item1.png'/></div>
+            
+            <div class='item'><img src='images/items/item1.png'/></div>
+            <div class='item'><img src='images/items/item1.png'/></div>
+            <div class='item'><img src='images/items/item1.png'/></div>
           </div>
         </div>
 
         <div class='right'>
-          <!-- <p>jub</p> -->
-            <div class='icon'><img src='images/head_icon.png'/></div>
-            <div class='slot'>judy chen</div>
             <div class='links'>
               <a href='https://twitter.com/jubnaut' target='_blank'><img src='images/links/twitter.png'/></a>
-              <a href='https://www.twitch.tv/jubnaut' target='_blank'><img src='images/links/twitch.png'/></a>
               <a href='https://www.instagram.com/jubbeob' target='_blank'><img src='images/links/ig.png'/></a>
-              <a href='https://jub.itch.io' target='_blank'><img src='images/links/itch.png'/></a>
             </div>
         </div>
       </div>
