--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class='item'><img src='images/items/item1.png'/></div>
             <div class='item'><img src='images/items/item1.png'/></div>
             <div class='item'><img src='images/items/item1.png'/></div>
-            
+
             <div class='item'><img src='images/items/item1.png'/></div>
             <div class='item'><img src='images/items/item1.png'/></div>
             <div class='item'><img src='images/items/item1.png'/></div>
@@ -30,11 +30,17 @@
         <div class='right'>
             <div class='links'>
               <a href='https://twitter.com/jubnaut' target='_blank'><img src='images/links/twitter.png'/></a>
-              <a href='https://www.instagram.com/jubbeob' target='_blank'><img src='images/links/ig.png'/></a>
+              <a href='https://www.instagram.com/jeob.i' target='_blank'><img src='images/links/ig.png'/></a>
             </div>
         </div>
       </div>
+      <div class='out' id='label'>
+        Hello!
+      </div>
+      <footer>
+        © 2023 Judy Chen
+      </footer>
     </div>
   </body>
-
 </html>
+
