--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       <div class='in'>
         <div class='left'>
           <div class='grid'>
-            <div class='item'><img src='images/items/item1.png'/></div>
+            <a href='https://shop.jud.es' target='_blank'>
+              <div class='item'>
+                <div class='shop'></div>
+              </div>
+            </a>
             <div class='item'><img src='images/items/item1.png'/></div>
             <div class='item'><img src='images/items/item1.png'/></div>
 
@@ -35,7 +39,7 @@
         </div>
       </div>
       <div class='out' id='label'>
-        Hello!
+        hello!
       </div>
       <footer>
         © 2023 Judy Chen
