--- a/index.html
+++ b/index.html
@@ -18,16 +18,32 @@
                 <div class='shop'></div>
               </div>
             </a>
-            <div class='item'><img src='images/items/item1.png'/></div>
-            <div class='item'><img src='images/items/item1.png'/></div>
+            <div class='item'>
+              <div class='soon'></div>
+            </div>
+            <div class='item'>
+              <div class='soon'></div>
+            </div>
 
-            <div class='item'><img src='images/items/item1.png'/></div>
-            <div class='item'><img src='images/items/item1.png'/></div>
-            <div class='item'><img src='images/items/item1.png'/></div>
+            <div class='item'>
+              <div class='soon'></div>
+            </div>
+            <div class='item'>
+              <div class='soon'></div>
+            </div>
+            <div class='item'>
+              <div class='soon'></div>
+            </div>
 
-            <div class='item'><img src='images/items/item1.png'/></div>
-            <div class='item'><img src='images/items/item1.png'/></div>
-            <div class='item'><img src='images/items/item1.png'/></div>
+            <div class='item'>
+              <div class='soon'></div>
+            </div>
+            <div class='item'>
+              <div class='soon'></div>
+            </div>
+            <div class='item'>
+              <div class='soon'></div>
+            </div>
           </div>
         </div>
 
