--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   	<title>jub</title>
   	<link rel='shortcut icon' href='favicon.ico'/>
   	<link rel='stylesheet' href='css/style.css'>
+    <script type="text/javascript" src="js/script.js"></script>
   </head>
 
   <body>
@@ -14,34 +15,34 @@
         <div class='left'>
           <div class='grid'>
             <a href='https://shop.jud.es' target='_blank'>
-              <div class='item'>
+              <div class='item' onmouseover='label(this)' onmouseout='reset()' id='shop'>
                 <div class='shop'></div>
               </div>
             </a>
-            <div class='item'>
+            <div class='item' onmouseover='label(this)' onmouseout='reset()' id='coming soon'>
               <div class='soon'></div>
             </div>
-            <div class='item'>
-              <div class='soon'></div>
-            </div>
-
-            <div class='item'>
-              <div class='soon'></div>
-            </div>
-            <div class='item'>
-              <div class='soon'></div>
-            </div>
-            <div class='item'>
+            <div class='item' onmouseover='label(this)' onmouseout='reset()' id='coming soon'>
               <div class='soon'></div>
             </div>
 
-            <div class='item'>
+            <div class='item' onmouseover='label(this)' onmouseout='reset()' id='coming soon'>
               <div class='soon'></div>
             </div>
-            <div class='item'>
+            <div class='item' onmouseover='label(this)' onmouseout='reset()' id='coming soon'>
               <div class='soon'></div>
             </div>
-            <div class='item'>
+            <div class='item' onmouseover='label(this)' onmouseout='reset()' id='coming soon'>
+              <div class='soon'></div>
+            </div>
+
+            <div class='item' onmouseover='label(this)' onmouseout='reset()' id='coming soon'>
+              <div class='soon'></div>
+            </div>
+            <div class='item' onmouseover='label(this)' onmouseout='reset()' id='coming soon'>
+              <div class='soon'></div>
+            </div>
+            <div class='item' onmouseover='label(this)' onmouseout='reset()' id='coming soon'>
               <div class='soon'></div>
             </div>
           </div>
@@ -54,8 +55,10 @@
             </div>
         </div>
       </div>
-      <div class='out' id='label'>
-        hello!
+      <div class='out'>
+        <p id='display'>
+          hello!
+        </p>
       </div>
       <footer>
         © 2023 Judy Chen
