--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
                 <div class='shop'></div>
               </div>
             </a>
-            <div class='item' onmouseover='label(this)' onmouseout='reset()' id='coming soon'>
-              <div class='soon'></div>
-            </div>
+            <a href='https://jub.itch.io' target='_blank'>
+              <div class='item' onmouseover='label(this)' onmouseout='reset()' id='games'>
+                <div class='games'></div>
+              </div>
+            </a>
             <div class='item' onmouseover='label(this)' onmouseout='reset()' id='coming soon'>
               <div class='soon'></div>
             </div>
