update links, add prints

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       <div class='in'>
         <div class='left'>
           <div class='grid'>
+            <a href='https://www.inprnt.com/profile/jub/' target='_blank'>
+              <div class='item' onmouseover='label(this)' onmouseout='reset()' id='prints'>
+                <div class='prints'></div>
+              </div>
+            </a>
             <a href='https://shop.jud.es' target='_blank'>
               <div class='item' onmouseover='label(this)' onmouseout='reset()' id='shop'>
                 <div class='shop'></div>
@@ -24,10 +29,6 @@
                 <div class='games'></div>
               </div>
             </a>
-            <div class='item' onmouseover='label(this)' onmouseout='reset()' id='coming soon'>
-              <div class='soon'></div>
-            </div>
-
             <div class='item' onmouseover='label(this)' onmouseout='reset()' id='coming soon'>
               <div class='soon'></div>
             </div>
@@ -53,7 +54,7 @@
         <div class='right'>
             <div class='links'>
               <a href='https://twitter.com/jubnaut' target='_blank'><img src='images/links/twitter.png'/></a>
-              <a href='https://www.instagram.com/jeob.i' target='_blank'><img src='images/links/ig.png'/></a>
+              <a href='https://www.instagram.com/ch3ob' target='_blank'><img src='images/links/ig.png'/></a>
             </div>
         </div>
       </div>
